--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <section id="about" class="container-fluid">
         <div class="container g-5 mt-5 mb-0">
             <div class="row row-cols-1 row-cols-md-2 align-items-center g-5 py-5">
-                <div class="col d-flex flex-column align-items-center gap-2 container px-5" >
-                  <img src="./img/Beach.jpg" class="about_photo img-fluid rounded mx-auto d-block"data-aos="fade-right" data-aos-duration="1000"/>
+                <div class="col d-flex flex-column align-items-center gap-2 container px-5 " >
+                  <img src="./img/Beach.jpg" class="magic-card about_photo img-fluid rounded mx-auto d-block"data-aos="fade-right" data-aos-duration="1000"/>
                   <h2 class="fw-bold fs-4 text-body-emphasis" data-aos="fade-right" data-aos-duration="1200">"Learn, adapt, excel."</h2>
                   <p class="text-body-secondary justify-content-center" data-aos="fade-right" data-aos-duration="1500">As a testament to the transformative power of exploring with an open heart and creating with an open mind in a world where conformity is often demanded, Andrew thrives. When exploration and creativity become kindred spirits, their story reflects courage, curiosity, and endless possibilities.</p>
                 </div>
