--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
         <div class="container g-5 mt-5 mb-0">
             <div class="row row-cols-1 row-cols-md-2 align-items-center g-5 py-5">
                 <div class="col d-flex flex-column align-items-center gap-2 container px-5 " >
-                  <img src="./img/Beach.jpg" class="magic-card about_photo img-fluid rounded mx-auto d-block"data-aos="fade-right" data-aos-duration="1000"/>
-                  <h2 class="fw-bold fs-4 text-body-emphasis" data-aos="fade-right" data-aos-duration="1200">"Learn, adapt, excel."</h2>
+                    <img src="./img/Beach.jpg" class="card about_photo img-fluid rounded mx-auto d-block"data-aos="fade-right" data-aos-duration="1000"/>
+                  <h2 class="fw-bold fs-4 text-body-emphasis mt-2" data-aos="fade-right" data-aos-duration="1200">"Learn, adapt, excel."</h2>
                   <p class="text-body-secondary justify-content-center" data-aos="fade-right" data-aos-duration="1500">As a testament to the transformative power of exploring with an open heart and creating with an open mind in a world where conformity is often demanded, Andrew thrives. When exploration and creativity become kindred spirits, their story reflects courage, curiosity, and endless possibilities.</p>
                 </div>
 
                 <div class="features_grid">        
                     <div class="col d-flex flex-column gap-2 technologies">
                         <div class="col d-flex flex-lg-row gap-2 align-items-center mb-2"data-aos="fade-right" data-aos-duration="500">
-                            <div class="icon-square feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+                            <div class="magic-card icon-square feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3" data-aos="fade-right" data-aos-duration="500">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-code-square" viewBox="0 0 16 16">
                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
                                     <path d="M6.854 4.646a.5.5 0 0 1 0 .708L4.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0m2.292 0a.5.5 0 0 0 0 .708L11.793 8l-2.647 2.646a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708 0"/>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="col d-flex flex-column gap-2 education">
                         <div class="col d-flex flex-lg-row gap-2 align-items-center mb-2">
-                            <div class="icon-square feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3" data-aos="fade-right" data-aos-duration="500">
+                            <div class="magic-card icon-square feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3" data-aos="fade-right" data-aos-duration="500">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-mortarboard" viewBox="0 0 16 16">
                                     <path d="M8.211 2.047a.5.5 0 0 0-.422 0l-7.5 3.5a.5.5 0 0 0 .025.917l7.5 3a.5.5 0 0 0 .372 0L14 7.14V13a1 1 0 0 0-1 1v2h3v-2a1 1 0 0 0-1-1V6.739l.686-.275a.5.5 0 0 0 .025-.917zM8 8.46 1.758 5.965 8 3.052l6.242 2.913z"/>
                                     <path d="M4.176 9.032a.5.5 0 0 0-.656.327l-.5 1.7a.5.5 0 0 0 .294.605l4.5 1.8a.5.5 0 0 0 .372 0l4.5-1.8a.5.5 0 0 0 .294-.605l-.5-1.7a.5.5 0 0 0-.656-.327L8 10.466zm-.068 1.873.22-.748 3.496 1.311a.5.5 0 0 0 .352 0l3.496-1.311.22.748L8 12.46z"/>
@@ -128,7 +128,7 @@
                     </div>  
                     <div class="col d-flex flex-column gap-2 software_used" >
                         <div class="col d-flex flex-lg-row gap-2 align-items-center mb-2" >
-                            <div class="icon-square feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3" data-aos="fade-right" data-aos-duration="1000">
+                            <div class="magic-card icon-square feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3" data-aos="fade-right" data-aos-duration="1000">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-tools" viewBox="0 0 16 16">
                                     <path d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.27 3.27a.997.997 0 0 0 1.414 0l1.586-1.586a.997.997 0 0 0 0-1.414l-3.27-3.27a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3q0-.405-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814zm9.646 10.646a.5.5 0 0 1 .708 0l2.914 2.915a.5.5 0 0 1-.707.707l-2.915-2.914a.5.5 0 0 1 0-.708M3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026z"/>
                                 </svg>
@@ -149,7 +149,7 @@
 
                     <div class="col d-flex flex-column gap-2 work_history">
                         <div class="col d-flex flex-lg-row gap-2 align-items-center mb-2">
-                            <div class="icon-square feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3"data-aos="fade-right" data-aos-duration="1000">
+                            <div class="magic-card icon-square feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3"data-aos="fade-right" data-aos-duration="1000">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-briefcase" viewBox="0 0 16 16">
                                     <path d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v8A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-8A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5m1.886 6.914L15 7.151V12.5a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5V7.15l6.614 1.764a1.5 1.5 0 0 0 .772 0M1.5 4h13a.5.5 0 0 1 .5.5v1.616L8.129 7.948a.5.5 0 0 1-.258 0L1 6.116V4.5a.5.5 0 0 1 .5-.5"/>
                                 </svg>
@@ -269,14 +269,13 @@
           </div>
     </section> -->
     <main id="work-samples">
-
         <div id="myCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
           <div class="carousel-indicators">
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1" aria-current="true"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active card" aria-label="Slide 1" aria-current="true"></button>
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
           </div>
-          <div class="carousel-inner ">
+          <div class="carousel-inner">
              <div class="container">
                 <div class="carousel-item active">
                     <img src="./img/interior_design_1.png"  class="d-block w-700 img-fluid " alt="...">
@@ -404,11 +403,9 @@
           <p class="float-end"><a href="#">Back to top</a></p>
           <p>© 2017–2023 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
         </footer>
-      </main> -->
-
-
-    
+      </main> -->  
 </body>
+
 </html>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
