--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <title>Jov-T</title>
 </head>
 <body>
-
     <section class="container-fluid g-0">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark gradient-background-2">
             <div class="container-fluid px-4 mx-4">
                 <a class="navbar-brand mx-5 text-shadow-drop-br" href="#">
-                    <img class="navbar-brand brand_logo mx-4" src="./img/logo.png" alt="brand logo" data-aos="fade-down-right" data-aos-duration="800"/>
+                    <img class="navbar-brand brand_logo p-0" src="./img/logo.png" alt="brand logo" data-aos="fade-down-right" data-aos-duration="800"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
