--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section id="about" class="container-fluid about_section my-5">
         <div class="about_photo_container container px-5">
           <div class="container-fluid py-auto lg-col-6">
-            <img src="./img/Beach.jpg" class="about_photo rounded " data-aos="fade-right" data-aos-duration="1000"/>
+            <img src="./img/Beach.jpg" class="about_photo rounded img-fluid " data-aos="fade-right" data-aos-duration="1000"/>
           </div>
           <div class="container-fluid mx-lg-auto">
             <h2 class="fw-bold text-body-emphasis mt-4 pb-2" data-aos="fade-right" data-aos-duration="1200">"Learn, adapt, excel."</h2>
@@ -175,8 +175,8 @@
     </section>
 
   
-    <main id="work-samples">
-        <div id="myCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
+    <main id="work-samples" class="pb-5">
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active card" aria-label="Slide 1" aria-current="true"></button>
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
