--- a/index.html
+++ b/index.html
@@ -254,99 +254,99 @@
         </div>
     </main> -->
 
-  <main id="carouselExampleDark work-samples" class="carousel carousel-dark slide">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner gradient-background-3 d-flex">
-      <div class="carousel-item active" data-bs-interval="10000">
-        <img src="./img/interior_design_2.png" class="carousel_img col-md-4 col-lg-8 d-block w-100" alt="...">
-        <div class="carousel-caption text-start d-md-block text-bg-light rounded container text-black-emphasis col-9 col-sm-7 col-lg-6 col-xl-5">
-          <h2 >Interior Design</h2>
-          <p>In addition to his degrees in Interior Design from the Polytechnic University of the Philippines, Andrew has years of experience in the field - such as project management, interior engineering, and a wide range of client support services.</p>
-        </div>
+  <div id="carouselExampleDark" class="carousel carousel-dark slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
-      <div class="carousel-item" data-bs-interval="20000">
-        <img src="./img/interior_design_1.png" class="carousel_img col-md-4 col-lg-8 d-block w-100" alt="...">
-        <div class="carousel-caption text-start d-md-block text-bg-light rounded container text-black-emphasis col-9 col-sm-7 col-lg-6 col-xl-5">
-          <h2 >Three Bedroom Residence in the Heart of Taguig</h2>
-          <p>Andrew has catered to a diverse clientele, including those of high profile. His adept communication skills establish strong connections with clients, facilitating the translation of their needs into effective designs.
-            The foundation of honesty and accountability further sustains and strengthens the relationships with clients.</p>
+      <div id="work-samples" class="carousel-inner gradient-background-3 d-flex">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="./img/interior_design_2.png" class="carousel_img col-md-4 col-lg-8 d-block w-100" alt="...">
+          <div class="carousel-caption text-start d-md-block text-bg-light rounded container text-black-emphasis col-9 col-sm-7 col-lg-6 col-xl-5">
+            <h2 >Interior Design</h2>
+            <p>In addition to his degrees in Interior Design from the Polytechnic University of the Philippines, Andrew has years of experience in the field - such as project management, interior engineering, and a wide range of client support services.</p>
+          </div>
         </div>
-      </div>
-      <div class="carousel-item" data-bs-interval="30000">
-        <img src="./img/Avida.jpg" class="carousel_img col-md-4 col-lg-8 d-block w-100" alt="...">
-        <div class="img-overlay mx-auto my-auto img-overlay">
-          <a class="btn btn-md btn btn-light info mx-2" href="https://www.realliving.com.ph/lifestyle/arts-culture/26-creatives-to-watch-the-architects-and-designers" target="_blank">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bookmark-star" viewBox="0 0 20 20">
-              <path d="M7.84 4.1a.178.178 0 0 1 .32 0l.634 1.285a.18.18 0 0 0 .134.098l1.42.206c.145.021.204.2.098.303L9.42 6.993a.18.18 0 0 0-.051.158l.242 1.414a.178.178 0 0 1-.258.187l-1.27-.668a.18.18 0 0 0-.165 0l-1.27.668a.178.178 0 0 1-.257-.187l.242-1.414a.18.18 0 0 0-.05-.158l-1.03-1.001a.178.178 0 0 1 .098-.303l1.42-.206a.18.18 0 0 0 .134-.098z"/>
-              <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/>
-            </svg>
-            25 Creatives</a>
-          <a class="btn btn-md btn btn-light info mx-2" href="https://www.realliving.com.ph/real-estate/take-a-peek-inside-the-avida-x-rl-open-house" target="_blank">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bookmark-star" viewBox="0 0 20 20">
-              <path d="M7.84 4.1a.178.178 0 0 1 .32 0l.634 1.285a.18.18 0 0 0 .134.098l1.42.206c.145.021.204.2.098.303L9.42 6.993a.18.18 0 0 0-.051.158l.242 1.414a.178.178 0 0 1-.258.187l-1.27-.668a.18.18 0 0 0-.165 0l-1.27.668a.178.178 0 0 1-.257-.187l.242-1.414a.18.18 0 0 0-.05-.158l-1.03-1.001a.178.178 0 0 1 .098-.303l1.42-.206a.18.18 0 0 0 .134-.098z"/>
-              <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/>
-            </svg>
-            Avida X RL</a>
-        </div>    
-        <div class="carousel-caption text-start d-md-block text-bg-light rounded container text-black-emphasis col-9 col-sm-7 col-lg-6 col-xl-5">
-          <h2 >Avida Openhouse</h2>
-          <p>Selected among Realliving Magazine's 25 creatives to watch in July 2015, Andrew received an invitation to contribute to the Avida Openhouse event, where he was tasked with designing one of their booths.</p>
+        <div class="carousel-item" data-bs-interval="20000">
+          <img src="./img/interior_design_1.png" class="carousel_img col-md-4 col-lg-8 d-block w-100" alt="...">
+          <div class="carousel-caption text-start d-md-block text-bg-light rounded container text-black-emphasis col-9 col-sm-7 col-lg-6 col-xl-5">
+            <h2 >Three Bedroom Residence in the Heart of Taguig</h2>
+            <p>Andrew has catered to a diverse clientele, including those of high profile. His adept communication skills establish strong connections with clients, facilitating the translation of their needs into effective designs.
+              The foundation of honesty and accountability further sustains and strengthens the relationships with clients.</p>
+          </div>
         </div>
-      </div>
+        <div class="carousel-item" data-bs-interval="30000">
+          <img src="./img/Avida.jpg" class="carousel_img col-md-4 col-lg-8 d-block w-100" alt="...">
+          <div class="img-overlay mx-auto my-auto img-overlay">
+            <a class="btn btn-md btn btn-light info mx-2" href="https://www.realliving.com.ph/lifestyle/arts-culture/26-creatives-to-watch-the-architects-and-designers" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bookmark-star" viewBox="0 0 20 20">
+                <path d="M7.84 4.1a.178.178 0 0 1 .32 0l.634 1.285a.18.18 0 0 0 .134.098l1.42.206c.145.021.204.2.098.303L9.42 6.993a.18.18 0 0 0-.051.158l.242 1.414a.178.178 0 0 1-.258.187l-1.27-.668a.18.18 0 0 0-.165 0l-1.27.668a.178.178 0 0 1-.257-.187l.242-1.414a.18.18 0 0 0-.05-.158l-1.03-1.001a.178.178 0 0 1 .098-.303l1.42-.206a.18.18 0 0 0 .134-.098z"/>
+                <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/>
+              </svg>
+              25 Creatives</a>
+            <a class="btn btn-md btn btn-light info mx-2" href="https://www.realliving.com.ph/real-estate/take-a-peek-inside-the-avida-x-rl-open-house" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bookmark-star" viewBox="0 0 20 20">
+                <path d="M7.84 4.1a.178.178 0 0 1 .32 0l.634 1.285a.18.18 0 0 0 .134.098l1.42.206c.145.021.204.2.098.303L9.42 6.993a.18.18 0 0 0-.051.158l.242 1.414a.178.178 0 0 1-.258.187l-1.27-.668a.18.18 0 0 0-.165 0l-1.27.668a.178.178 0 0 1-.257-.187l.242-1.414a.18.18 0 0 0-.05-.158l-1.03-1.001a.178.178 0 0 1 .098-.303l1.42-.206a.18.18 0 0 0 .134-.098z"/>
+                <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/>
+              </svg>
+              Avida X RL</a>
+          </div>    
+          <div class="carousel-caption text-start d-md-block text-bg-light rounded container text-black-emphasis col-9 col-sm-7 col-lg-6 col-xl-5">
+            <h2 >Avida Openhouse</h2>
+            <p>Selected among Realliving Magazine's 25 creatives to watch in July 2015, Andrew received an invitation to contribute to the Avida Openhouse event, where he was tasked with designing one of their booths.</p>
+          </div>
+        </div>
 
-    <button class="container-fluid carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="container-fluid carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </main>   
-
-  <footer class="my-2 mx-auto d-block col-11 col-sm-10">
-    <div class="d-flex container-fluid ">
-      <div class="container-fluid col-md-6 col-sm-8 justify-content-start my-auto mx-auto py-2 mx-auto">
-        <a href="index.html" class="text-body-secondary text-decoration-none">
-          <img class="navbar-brand brand_logo img-fluid" src="./img/logo.png" alt="brand logo" >
-        </a>
-        <span class="trade_mark text-body-secondary">© 2023, Joevie Andrew Tuquib</span>
+        <button class="container-fluid carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="container-fluid carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      
-      <div class="container-fluid col-md-4 col-sm-4 my-auto mx-sm-auto">
-        <ul class="nav justify-content-end list-unstyled mx-sm-auto">
-          <li class="ms-3">
-            <a class="text-body-secondary" href="mailto:andrew.tuquib@gmail.com">
-              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
-                <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
-              </svg>
-            </a>
-          </li>
-          <li class="ms-3">
-            <a class="text-body-secondary" href="https://linkedin.com/in/joevie-andrew-tuquib/">
-              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
-              </svg>
-            </a>
-          </li>
-          <li class="ms-3">
-            <a class="text-body-secondary" href="https://www.facebook.com/joevieandrew.tuquib/">
-              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </footer>
+  </div>
 
 </body>
 
+<footer class="my-2 mx-auto d-block col-11 col-sm-10">
+  <div class="d-flex container-fluid ">
+    <div class="container-fluid col-md-6 col-sm-8 justify-content-start my-auto mx-auto py-2 mx-auto">
+      <a href="index.html" class="text-body-secondary text-decoration-none">
+        <img class="navbar-brand brand_logo img-fluid" src="./img/logo.png" alt="brand logo" >
+      </a>
+      <span class="trade_mark text-body-secondary">© 2023, Joevie Andrew Tuquib</span>
+    </div>
+    
+    <div class="container-fluid col-md-4 col-sm-4 my-auto mx-sm-auto">
+      <ul class="nav justify-content-end list-unstyled mx-sm-auto">
+        <li class="ms-3">
+          <a class="text-body-secondary" href="mailto:andrew.tuquib@gmail.com">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+              <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+            </svg>
+          </a>
+        </li>
+        <li class="ms-3">
+          <a class="text-body-secondary" href="https://linkedin.com/in/joevie-andrew-tuquib/">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+              <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+            </svg>
+          </a>
+        </li>
+        <li class="ms-3">
+          <a class="text-body-secondary" href="https://www.facebook.com/joevieandrew.tuquib/">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+              <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</footer>
 
 
 </html>
