--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <nav class="navbar navbar-expand-lg gradient-background-2" aria-label="Eleventh navbar example">
   <div class="container-fluid mx-auto px-5 col-lg-10 col-sm-11">
-    <a class="navbar-brand" href="#"><img class="navbar-brand brand_logo mx-auto" src="./img/logo.png" alt="brand logo" data-aos="fade-down-right" data-aos-duration="800"/></a>
-    <button class="navbar-toggler collapsed mx-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#"><img class="navbar-brand brand_logo" src="./img/logo.png" alt="brand logo" data-aos="fade-down-right" data-aos-duration="800"/></a>
+    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -307,7 +307,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-  </div>
+      <DIV
 
 </body>
 
