--- a/index.html
+++ b/index.html
@@ -266,41 +266,43 @@
       <div id="work-samples" class="carousel-inner gradient-background-3 d-flex">
         <div class="carousel-item active" data-bs-interval="10000">
           <img src="./img/interior_design_2.png" class="carousel_img col-md-4 col-lg-6 d-block w-100" alt="...">
-          <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-black-emphasis col-9 col-sm-7 col-lg-6 col-xl-5">
+          <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-black-emphasis bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
             <h2 >Interior Design</h2>
             <p>In addition to his degrees in Interior Design from the Polytechnic University of the Philippines, Andrew has years of experience in the field - such as project management, interior engineering, and a wide range of client support services.</p>
           </div>
         </div>
-        <div class="carousel-item" data-bs-interval="20000">
-          <img src="./img/interior_design_1.png" class="carousel_img col-md-4 col-lg-6 d-block w-100" alt="...">
-          <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-black-emphasis col-9 col-sm-7 col-lg-6 col-xl-5">
-            <h2 >Three Bedroom Residence in the Heart of Taguig</h2>
-            <p>Andrew has catered to a diverse clientele, including those of high profile. His adept communication skills establish strong connections with clients, facilitating the translation of their needs into effective designs.
-              The foundation of honesty and accountability further sustains and strengthens the relationships with clients.</p>
-          </div>
-        </div>
+
         <div class="carousel-item" data-bs-interval="30000">
           <img src="./img/Avida.jpg" class="carousel_img col-md-4 col-lg-6 d-block w-100" alt="...">
           <div class="img-overlay mx-auto my-auto img-overlay">
-            <a class="btn btn-md  btn btn-light info mx-2" href="https://www.realliving.com.ph/lifestyle/arts-culture/25-creatives-to-watch-the-architects-and-designers" target="_blank">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bookmark-star text-warning" viewBox="0 0 20 20">
-                <path d="M7.84 4.1a.178.178 0 0 1 .32 0l.634 1.285a.18.18 0 0 0 .134.098l1.42.206c.145.021.204.2.098.303L9.42 6.993a.18.18 0 0 0-.051.158l.242 1.414a.178.178 0 0 1-.258.187l-1.27-.668a.18.18 0 0 0-.165 0l-1.27.668a.178.178 0 0 1-.257-.187l.242-1.414a.18.18 0 0 0-.05-.158l-1.03-1.001a.178.178 0 0 1 .098-.303l1.42-.206a.18.18 0 0 0 .134-.098z"/>
-                <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/>
+            <a class="btn btn-md  btn btn-light  info mx-2" href="https://www.realliving.com.ph/lifestyle/arts-culture/25-creatives-to-watch-the-architects-and-designers" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-link-45deg text-warning " viewBox="0 0 16 16">
+                <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1 1 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4 4 0 0 1-.128-1.287z"/>
+                <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243z"/>
               </svg>
               25 Creatives</a>
-            <a class="btn btn-md  btn btn-light info mx-2" href="https://www.realliving.com.ph/real-estate/take-a-peek-inside-the-avida-x-rl-open-house" target="_blank">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bookmark-star text-warning" viewBox="0 0 20 20">
-                <path d="M7.84 4.1a.178.178 0 0 1 .32 0l.634 1.285a.18.18 0 0 0 .134.098l1.42.206c.145.021.204.2.098.303L9.42 6.993a.18.18 0 0 0-.051.158l.242 1.414a.178.178 0 0 1-.258.187l-1.27-.668a.18.18 0 0 0-.165 0l-1.27.668a.178.178 0 0 1-.257-.187l.242-1.414a.18.18 0 0 0-.05-.158l-1.03-1.001a.178.178 0 0 1 .098-.303l1.42-.206a.18.18 0 0 0 .134-.098z"/>
-                <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/>
+            <a class="btn btn-md  btn btn-light  info mx-2" href="https://www.realliving.com.ph/real-estate/take-a-peek-inside-the-avida-x-rl-open-house" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-link-45deg text-warning " viewBox="0 0 16 16">
+                <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1 1 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4 4 0 0 1-.128-1.287z"/>
+                <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243z"/>
               </svg>
               Avida X RL</a>
           </div>    
-          <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-black-emphasis col-9 col-sm-7 col-lg-6 col-xl-5">
+          <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-black-emphasis bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
             <h2 >Avida Openhouse</h2>
             <p>Selected among Realliving Magazine's 25 creatives to watch in July 2015, Andrew received an invitation to contribute to the Avida Openhouse event, where he was tasked with designing one of their booths.</p>
           </div>
         </div>
 
+        <div class="carousel-item" data-bs-interval="20000">
+          <img src="./img/interior_design_1.png" class="carousel_img col-md-4 col-lg-6 d-block w-100" alt="...">
+          <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-black-emphasis bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
+            <h2 >Three Bedroom Residence in the Heart of Taguig</h2>
+            <p>Andrew has catered to a diverse clientele, including those of high profile. His adept communication skills establish strong connections with clients, facilitating the translation of their needs into effective designs.
+              The foundation of honesty and accountability further sustains and strengthens the relationships with clients.</p>
+          </div>
+        </div>
+        
         <button class="container-fluid carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
@@ -314,15 +316,15 @@
 </body>
 
 <footer class="my-2 mx-auto d-block col-12 col-sm-10">
-  <div class="d-flex container-fluid ">
-    <div class="container-fluid col-md-6 col-sm-8 justify-content-start my-auto mx-auto py-2 mx-auto">
+  <div class="d-flex">
+    <div class="col-md-6 col-sm-8 justify-content-start my-auto mx-auto py-2 mx-auto">
       <a href="index.html" class="text-body-secondary text-decoration-none">
         <img class="navbar-brand brand_logo img-fluid" src="./img/logo.png" alt="brand logo" >
       </a>
       <span class="trade_mark text-body-secondary">© 2023, Joevie Andrew Tuquib</span>
     </div>
     
-    <div class="container-fluid col-md-4 col-sm-4 my-auto mx-sm-auto">
+    <div class="col-md-4 col-sm-4 my-auto mx-sm-auto">
       <ul class="nav justify-content-end list-unstyled mx-sm-auto">
         <li class="ms-3">
           <a class="text-body-secondary btn-warning " href="mailto:andrew.tuquib@gmail.com">
