--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <nav class="navbar navbar-expand-lg gradient-background-2" aria-label="Eleventh navbar example">
-  <div class="container-fluid mx-auto px-5 col-lg-10 col-sm-11">
+  <div class="container-fluid mx-auto mx-auto col-lg-10 col-sm-11 px-4">
     <a class="navbar-brand" href="#"><img class="navbar-brand brand_logo" src="./img/logo.png" alt="brand logo" data-aos="fade-down-right" data-aos-duration="800"/></a>
     <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon" ></span>
     </button>
 
-    <div class="navbar-collapse collapse " id="navbarsExample09">
+    <div class="navbar-collapse collapse" id="navbarsExample09">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
           <a class="nav-link active text-body-emphasis text-shadow-drop-br" href="#" alt="Home" >Home</a>
@@ -266,7 +266,7 @@
       <div id="work-samples" class="carousel-inner gradient-background-3 d-flex">
         <div class="carousel-item active" data-bs-interval="10000">
           <img src="./img/interior_design_2.png" class="carousel_img col-md-4 col-lg-6 d-block w-100" alt="...">
-          <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-black-emphasis bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
+          <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-body-dark w-900 bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
             <h2 >Interior Design</h2>
             <p>In addition to his degrees in Interior Design from the Polytechnic University of the Philippines, Andrew has years of experience in the field - such as project management, interior engineering, and a wide range of client support services.</p>
           </div>
@@ -288,7 +288,7 @@
               </svg>
               Avida X RL</a>
           </div>    
-          <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-black-emphasis bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
+          <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-body-dark w-900 bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
             <h2 >Avida Openhouse</h2>
             <p>Selected among Realliving Magazine's 25 creatives to watch in July 2015, Andrew received an invitation to contribute to the Avida Openhouse event, where he was tasked with designing one of their booths.</p>
           </div>
@@ -296,7 +296,7 @@
 
         <div class="carousel-item" data-bs-interval="20000">
           <img src="./img/interior_design_1.png" class="carousel_img col-md-4 col-lg-6 d-block w-100" alt="...">
-          <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-black-emphasis bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
+          <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-body-dark w-900 bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
             <h2 >Three Bedroom Residence in the Heart of Taguig</h2>
             <p>Andrew has catered to a diverse clientele, including those of high profile. His adept communication skills establish strong connections with clients, facilitating the translation of their needs into effective designs.
               The foundation of honesty and accountability further sustains and strengthens the relationships with clients.</p>
@@ -316,15 +316,15 @@
 </body>
 
 <footer class="my-2 mx-auto d-block col-12 col-sm-10">
-  <div class="d-flex">
-    <div class="col-md-6 col-sm-8 justify-content-start my-auto mx-auto py-2 mx-auto">
+  <div class="d-flex container">
+    <div class="col-md-6 col-6 justify-content-start my-auto mx-auto py-2 mx-auto">
       <a href="index.html" class="text-body-secondary text-decoration-none">
-        <img class="navbar-brand brand_logo img-fluid" src="./img/logo.png" alt="brand logo" >
+        <img class="navbar-brand brand_logo py-2" src="./img/logo.png" alt="brand logo">
       </a>
       <span class="trade_mark text-body-secondary">© 2023, Joevie Andrew Tuquib</span>
     </div>
     
-    <div class="col-md-4 col-sm-4 my-auto mx-sm-auto">
+    <div class="col-md-4 col-sm-6 my-auto mx-sm-auto">
       <ul class="nav justify-content-end list-unstyled mx-sm-auto">
         <li class="ms-3">
           <a class="text-body-secondary btn-warning " href="mailto:andrew.tuquib@gmail.com">
