--- a/index.html
+++ b/index.html
@@ -290,14 +290,14 @@
           </div>    
           <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-body-dark w-900 bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
             <h2 >Avida Openhouse</h2>
-            <p>Selected among Realliving Magazine's 25 creatives to watch in July 2015, Andrew received an invitation to contribute to the Avida Openhouse event, where he was tasked with designing one of their booths.</p>
+            <p>Selected among Realliving Magazine's 25 creatives to watch in July 2015, Andrew received an invitation to contribute to the Avida openhouse event, where he was tasked with designing one of their booths.</p>
           </div>
         </div>
 
         <div class="carousel-item" data-bs-interval="20000">
           <img src="./img/interior_design_1.png" class="carousel_img col-md-4 col-lg-6 d-block w-100" alt="...">
           <div class="carousel-caption text-start d-md-block text-bg-light rounded container px-3 text-body-dark w-900 bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
-            <h2 >Three Bedroom Residence in the Heart of Taguig</h2>
+            <h2 >Luxury Projects</h2>
             <p>Andrew has catered to a diverse clientele, including those of high profile. His adept communication skills establish strong connections with clients, facilitating the translation of their needs into effective designs.
               The foundation of honesty and accountability further sustains and strengthens the relationships with clients.</p>
           </div>
