--- a/index.html
+++ b/index.html
@@ -275,14 +275,14 @@
         <div class="carousel-item" data-bs-interval="30000">
           <img src="./img/Avida.jpg" class="carousel_img col-md-4 col-lg-6 d-block w-100" alt="...">
           <div class="img-overlay mx-auto my-auto img-overlay">
-            <a class="btn btn-md  btn btn-light  info mx-2" href="https://www.realliving.com.ph/lifestyle/arts-culture/25-creatives-to-watch-the-architects-and-designers" target="_blank">
-              <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-link-45deg text-warning " viewBox="0 0 16 16">
+            <a class="btn btn-md  btn btn-warning text-light info mx-2" href="https://www.realliving.com.ph/lifestyle/arts-culture/25-creatives-to-watch-the-architects-and-designers" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-link-45deg text-light" viewBox="0 0 16 16">
                 <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1 1 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4 4 0 0 1-.128-1.287z"/>
                 <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243z"/>
               </svg>
               25 Creatives</a>
-            <a class="btn btn-md  btn btn-light  info mx-2" href="https://www.realliving.com.ph/real-estate/take-a-peek-inside-the-avida-x-rl-open-house" target="_blank">
-              <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-link-45deg text-warning " viewBox="0 0 16 16">
+            <a class="btn btn-md  btn btn-warning text-light info mx-2" href="https://www.realliving.com.ph/real-estate/take-a-peek-inside-the-avida-x-rl-open-house" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-link-45deg text-light" viewBox="0 0 16 16">
                 <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1 1 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4 4 0 0 1-.128-1.287z"/>
                 <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243z"/>
               </svg>
@@ -327,7 +327,7 @@
     <div class="col-md-4 col-sm-6 my-auto mx-sm-auto">
       <ul class="nav justify-content-end list-unstyled mx-sm-auto">
         <li class="ms-3">
-          <a class="text-body-secondary btn-warning " href="mailto:andrew.tuquib@gmail.com">
+          <a class="text-body-secondary " href="mailto:andrew.tuquib@gmail.com">
             <svg xmlns="http://www.w3.org/2000/svg" width="27" height="30" fill="currentColor" class="bi bi-envelope-fill text-light" viewBox="0 0 16 16">
               <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
             </svg>
