--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -84,13 +84,13 @@
   <section id="about" class="container-fluid py-5 justify-content-center bg-gradient bglight">
     <div class="row">
       <div class="container col-lg-5 col-md-8 col-sm-10 col-11 mx-auto my-4 col">
-        <img src="./img/Beach.jpg" class="rounded img-fluid text-shadow-drop-br" data-aos="fade-right" data-aos-duration="1000"/>
-        <h2 class="fw-bold mt-4 pb-2 text-shadow-drop-br" > <span class="text-danger">Learn</span> &#x2022; <span class="text-warning">Adapt</span> &#x2022; <span class="text-primary">Thrive</span></h2>
-        <p class="text-shadow-drop-br">Embracing the potential of navigating with an open heart and crafting with an open mind, he thrives in a world that often requires conformity.
+        <img src="./img/Beach.jpg" class="rounded img-fluid " data-aos="fade-right" data-aos-duration="1000"/>
+        <h2 class="fw-bold mt-4 pb-2 " > <span class="text-danger">Learn</span> &#x2022; <span class="text-warning">Adapt</span> &#x2022; <span class="text-primary">Thrive</span></h2>
+        <p class="">Embracing the potential of navigating with an open heart and crafting with an open mind, he thrives in a world that often requires conformity.
           The convergence of exploration and creativity in his work narrates a story of courage, curiosity, and boundless possibilities.</p>
       </div> 
     
-      <div class="container col-lg-5 col-md-9 col-sm-10 col-11 mx-auto my-auto row col text-shadow-drop-br">     
+      <div class="container col-lg-5 col-md-9 col-sm-10 col-11 mx-auto my-auto row col ">     
           
         <div class="col col-sm-6 col-md-6 col-12 mx-auto my-3 " data-aos="fade-right" data-aos-duration="1000">
           <div class="col d-flex flex-lg-row gap-2 align-items-center mb-2">
@@ -100,12 +100,12 @@
                     <path d="M4.176 9.032a.5.5 0 0 0-.656.327l-.5 1.7a.5.5 0 0 0 .294.605l4.5 1.8a.5.5 0 0 0 .372 0l4.5-1.8a.5.5 0 0 0 .294-.605l-.5-1.7a.5.5 0 0 0-.656-.327L8 10.466zm-.068 1.873.22-.748 3.496 1.311a.5.5 0 0 0 .352 0l3.496-1.311.22.748L8 12.46z"/>
                 </svg>
             </div>
-            <h3 class="fw-semibold mb-0 text-shadow-drop-br">Education</h3>
+            <h3 class="fw-semibold mb-0 ">Education</h3>
           </div>
           <ul class="container">
-            <li class=" feature_heading text-shadow-drop-br">Polytechnic Unversity of the Philippines</li>
-            <li class=" list_educ text-shadow-drop-br">Bachelor of Science in Interior Design</li>
-            <li class=" list_educ text-shadow-drop-br">2016</li>
+            <li class=" feature_heading ">Polytechnic Unversity of the Philippines</li>
+            <li class=" list_educ ">Bachelor of Science in Interior Design</li>
+            <li class=" list_educ ">2016</li>
           </ul>
         </div>     
   
@@ -117,14 +117,14 @@
                         <path d="M6.854 4.646a.5.5 0 0 1 0 .708L4.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0m2.292 0a.5.5 0 0 0 0 .708L11.793 8l-2.647 2.646a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708 0"/>
                     </svg>
                 </div>
-                <h3 class="fw-semibold mb-0 text-shadow-drop-br">Technologies</h3>
+                <h3 class="fw-semibold mb-0 ">Technologies</h3>
             </div>
             <ul class="container">
-                <li class="text-shadow-drop-br">HTML 5</li>
-                <li class="text-shadow-drop-br">CSS 3</li>
-                <li class="text-shadow-drop-br">Bootstrap</li>
-                <li class="text-shadow-drop-br">Javascript</li>
-                <li class="text-shadow-drop-br">React JS</li>
+                <li class="">HTML 5</li>
+                <li class="">CSS 3</li>
+                <li class="">Bootstrap</li>
+                <li class="">Javascript</li>
+                <li class="">React JS</li>
             </ul>
         </div>
   
@@ -135,20 +135,20 @@
                       <path d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v8A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-8A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5m1.886 6.914L15 7.151V12.5a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5V7.15l6.614 1.764a1.5 1.5 0 0 0 .772 0M1.5 4h13a.5.5 0 0 1 .5.5v1.616L8.129 7.948a.5.5 0 0 1-.258 0L1 6.116V4.5a.5.5 0 0 1 .5-.5"/>
                   </svg>
               </div>
-              <h3 class="fw-semibold mb-0 text-shadow-drop-br">Work History</h3>
+              <h3 class="fw-semibold mb-0 ">Work History</h3>
           </div>
           <ul class="container ">
-              <li class="text-shadow-drop-br feature_heading">Budji X Royal Design Architects</li>
-              <li class="text-shadow-drop-br list_educ">Interior Design Apprenticeship</li>
-              <li class="text-shadow-drop-br feature_heading">John Vigilla Design Studio</li>
-              <li class="text-shadow-drop-br list_educ">Jr. Interior Designer</li>
-              <li class="text-shadow-drop-br feature_heading">AGSiochi Architecture & Design Co.</li>
-              <li class="text-shadow-drop-br list_educ">Lead Designer</li>
-              <li class="text-shadow-drop-br feature_heading">Canon Business Service Centre Philippines</li>
-              <li class="text-shadow-drop-br list_educ">Admin & Facilities Coordinator</li>
-              <li class="text-shadow-drop-br list_educ">Executive Assistant to the Managing Director</li>
-              <li class="text-shadow-drop-br feature_heading">Ernst & Young Global Delivery Services</li>
-              <li class="text-shadow-drop-br list_educ">Executive Assistant - Oceania</li>
+              <li class=" feature_heading">Budji X Royal Design Architects</li>
+              <li class=" list_educ">Interior Design Apprenticeship</li>
+              <li class=" feature_heading">John Vigilla Design Studio</li>
+              <li class=" list_educ">Jr. Interior Designer</li>
+              <li class=" feature_heading">AGSiochi Architecture & Design Co.</li>
+              <li class=" list_educ">Lead Designer</li>
+              <li class=" feature_heading">Canon Business Service Centre Philippines</li>
+              <li class=" list_educ">Admin & Facilities Coordinator</li>
+              <li class=" list_educ">Executive Assistant to the Managing Director</li>
+              <li class=" feature_heading">Ernst & Young Global Delivery Services</li>
+              <li class=" list_educ">Executive Assistant - Oceania</li>
           </ul>
         </div>
   
@@ -162,14 +162,14 @@
               <h3 class="fw-semibold mb-0" >Software Used</h3>
           </div>
           <ul class="container">
-              <li class="text-shadow-drop-br">MS Office 365 | Google Suite</li>
-              <li class="text-shadow-drop-br">Asana | Jira | Trello</li>
-              <li class="text-shadow-drop-br">Adobe Photoshop</li>
-              <li class="text-shadow-drop-br">Adobe Illustrator</li>
-              <li class="text-shadow-drop-br">Adobe XD | Figma</li>
-              <li class="text-shadow-drop-br">Visual Studio Code</li>
-              <li class="text-shadow-drop-br">Autodesk AutoCad | ArchiCad</li>
-              <li class="text-shadow-drop-br">Google Sketchup</li>
+              <li class="">MS Office 365 | Google Suite</li>
+              <li class="">Asana | Jira | Trello</li>
+              <li class="">Adobe Photoshop</li>
+              <li class="">Adobe Illustrator</li>
+              <li class="">Adobe XD | Figma</li>
+              <li class="">Visual Studio Code</li>
+              <li class="">Autodesk AutoCad | ArchiCad</li>
+              <li class="">Google Sketchup</li>
           </ul>
         </div>  
       </div>
