--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h3 class="fw-semibold mb-0 ">Education</h3>
           </div>
           <ul class="container">
-            <li class=" feature_heading ">Polytechnic Unversity of the Philippines</li>
+            <li class=" feature_heading ">Polytechnic University of the Philippines</li>
             <li class=" list_educ ">Bachelor of Science in Interior Design</li>
             <li class=" list_educ ">2016</li>
           </ul>
