--- a/index.html
+++ b/index.html
@@ -177,13 +177,14 @@
     
   </section>
 
-  <main id="carouselExampleDark" class="carousel carousel-dark slide">
+  <main id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
       </div>
+
       <div id="work-samples" class="carousel-inner gradient-background-3 d-flex">
 
         <div class="carousel-item active" data-bs-interval="10000">
@@ -197,7 +198,7 @@
           </div>
         </div>
 
-        <div class="carousel-item" data-bs-interval="10000">
+        <div class="carousel-item" data-bs-interval="2000">
           <img src="./img/Avida.jpg" class="carousel_img col-md-4 col-lg-6 d-block w-100" alt="...">
 
           <div class="carousel-caption text-start d-md-block text-dark bg-light rounded container px-auto text-body-dark w-900 bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
@@ -221,7 +222,7 @@
           </div>    
         </div>
 
-        <div class="carousel-item" data-bs-interval="10000">
+        <div class="carousel-item">
           <img src="./img/interior_design_1.png" class="carousel_img col-md-4 col-lg-6 d-block w-100" alt="...">
           <div class="carousel-caption text-start d-md-block text-dark bg-light rounded container px-auto text-body-dark w-900 bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
             <h2 >Client Management</h2>
@@ -232,7 +233,7 @@
           </div>
         </div>
 
-        <div class="carousel-item" data-bs-interval="10000">
+        <div class="carousel-item">
           <img src="./img/wall-branding.png" class="carousel_img col-md-4 col-lg-6 d-block w-100" alt="...">
           <div class="carousel-caption text-start d-md-block text-dark bg-light rounded container px-auto text-body-dark w-900 bg-opacity-75 col-9 col-sm-7 col-lg-6 col-xl-5">
             <h2 >Corporate Branding</h2>
