--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             As well as his problem-solving abilities, he is an excellent communicator and collaborator.
           <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4" >
             <a href="./img/Joevie Andrew Tuquib - Resume.pdf" download="" data-aos="fade-up" data-aos-duration="1000"data-aos-anchor-placement="bottom-bottom">
-                <button type="button" class="btn btn-outline-light btn-lg px-md-2 my-sm-2 text-shadow-drop-br">
+                <button type="button" class="btn btn-outline-light btn-lg btn_width px-md-2 my-sm-2 text-shadow-drop-br">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class=" text-shadow-drop-br bi bi-arrow-down-circle mb-1" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293z"/>
                     </svg>
@@ -68,7 +68,7 @@
                 </button>
             </a>
             <a href="#work-samples" data-aos="fade-up" data-aos-duration="1200"data-aos-anchor-placement="bottom-bottom">
-                <button type="button" class="btn btn-outline-light btn-lg px-md-2 my-sm-2 text-shadow-drop-br">
+                <button type="button" class="btn btn-outline-light btn-lg btn_width px-md-2 my-sm-2 text-shadow-drop-br">
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi text-shadow-drop-br  bi-kanban mb-1" viewBox="0 0 16 16">
                     <path d="M13.5 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-11a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zm-11-1a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h11a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
                     <path d="M6.5 3a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1zm-4 0a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1zm8 0a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1z"/>
@@ -194,7 +194,7 @@
             <p>
               Andrew, with a degree in Interior Design from the Polytechnic University of the Philippines, combines academic knowledge with extensive practical experience.
               His expertise spans project management, interior engineering, design technologies, and comprehensive client support services.
-              This well-rounded background positions Andrew as a versatile professional capable of addressing diverse challenges across fields of design.</p>
+              This well-rounded background positions him as a versatile professional capable of addressing diverse challenges across design fields.</p>
           </div>
         </div>
 
@@ -207,13 +207,13 @@
               At the event, he was entrusted with the design of one of their booths, showcasing his expertise and creativity in a prominent setting.</p>
           </div>
           <div class="img-overlay my-5">
-            <a class="btn btn-sm btn-light text-body-dark mx-2" href="https://www.realliving.com.ph/lifestyle/arts-culture/25-creatives-to-watch-the-architects-and-designers" target="_blank">
+            <a class="btn btn-sm btn_width btn-light text-body-dark mx-2 mb-md-10" href="https://www.realliving.com.ph/lifestyle/arts-culture/25-creatives-to-watch-the-architects-and-designers" target="_blank">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-link-45deg text-warning" viewBox="0 0 16 16">
                 <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1 1 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4 4 0 0 1-.128-1.287z"/>
                 <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243z"/>
               </svg>
               25 Creatives</a>
-            <a class="btn btn-sm btn-light text-body-dark mx-2" href="https://www.realliving.com.ph/real-estate/take-a-peek-inside-the-avida-x-rl-open-house" target="_blank">
+            <a class="btn btn-sm btn_width btn-light text-body-dark mx-2" href="https://www.realliving.com.ph/real-estate/take-a-peek-inside-the-avida-x-rl-open-house" target="_blank">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-link-45deg text-warning" viewBox="0 0 16 16">
                 <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1 1 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4 4 0 0 1-.128-1.287z"/>
                 <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243z"/>
@@ -239,7 +239,7 @@
             <h2 >Corporate Branding</h2>
             <p>
               Excels in corporate branding, crafting visual elements that embody a company's identity and values. With experience in multinational institutions, he navigates diverse structures, creating resonant designs.
-              Proficient in graphic design, Andrew adeptly combines images and text for effective communication. His versatility shines in both print and digital media, showcasing adaptability across various formats and online platforms.</p>
+              Proficient in graphic design, he adeptly combines images and text for effective communication. His versatility shines in both print and digital media, showcasing adaptability across various formats and online platforms.</p>
           </div>
         </div>
         
