--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@
   <section id="contact" class="container-fluid py-4 col-12 bg-dark bg-gradient text-light">
 
     <div class="mx-auto col-lg-10 container">
-      <h2 class="h1-responsive font-weight-bold text-center mb-4 text-shadow-drop-br">Let's Chat!</h2>
-      <p class="text-center w-responsive mx-auto mb-5 text-shadow-drop-br">Do you have any questions? Please do not hesitate to send a note. I'll come back to you as soon as I can to help you.</p>
+      <h2 class="h1-responsive font-weight-bold text-center mb-4 text-shadow-drop-br" data-aos="fade-right" data-aos-duration="1000">Let's Chat!</h2>
+      <p class="text-center w-responsive mx-auto mb-5 text-shadow-drop-br" data-aos="fade-right" data-aos-duration="1000">Do you have any questions? Please do not hesitate to send a note. I'll come back to you as soon as I can to help you.</p>
 
-      <div class="row container mx-auto">
+      <div class="row container mx-auto" data-aos="fade-left" data-aos-duration="1000">
           <div class="col-lg-3 col-md-4 mx-auto text-center mt-2 mb-auto bg-light rounded text-dark">
               <ul class="list-unstyled mb-0">
                   <li class="my-2">
@@ -350,7 +350,7 @@
 </body>
 
 <footer class="mx-auto d-block">
-  <div class="d-flex container-fluid col-lg-10">
+  <div class="d-flex container-fluid col-lg-10" data-aos="fade-right" data-aos-duration="1000">
     <div class="col-md-6 col-6 justify-content-start my-auto mx-auto py-2">
       <a href="index.html" class="text-body-secondary text-decoration-none">
         <img class="navbar-brand brand_logo py-2" src="./img/logo.png" alt="brand logo">
@@ -358,8 +358,8 @@
       <span class="trade_mark text-light">© 2023, Joevie Andrew Tuquib</span>
     </div>
     
-    <div class="col-lg-6 col-md-4 col-sm-6 my-auto mx-auto">
-      <ul class="nav justify-content-end list-unstyled mx-3">
+    <div class="col-lg-6 col-md-4 col-sm-6 my-auto mx-auto" >
+      <ul class="nav justify-content-end list-unstyled mx-3" data-aos="fade-left" data-aos-duration="1000">
         <li class="ms-3">
           <a class="text-body-secondary " href="http://m.me/joevieandrew.tuquib/" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-messenger text-white" viewBox="0 0 16 16">
