--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
                 <li class="">CSS 3</li>
                 <li class="">Bootstrap</li>
                 <li class="">Javascript</li>
-                <li class="">React JS</li>
+                <li class="">JQuery</li>
+                <li class="">NodeJS</li>
+                <li class="">ReactJS</li>
             </ul>
         </div>
   
