--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img src="./img/Andrew.png" id="profile_photo" class="d-block img-fuid col-12" alt="Bootstrap Themes" loading="lazy" data-aos="fade-left" data-aos-duration="1300">
       </div>
 
-      <div class="container-fluid col col-11 col-sm-10 col-md-5 col-lg-6">
+      <div class="container-fluid col col-11 col-sm-10 col-md-5 col-lg-6 pt-sm-3">
           <h1 class="display-5 fw-bold text-white text-shadow-drop-br" data-aos="fade-right" data-aos-duration="1500">Joevie Andrew Tuquib</h1>
           <p class="lead text-white text-shadow-drop-br" data-aos="fade-right" data-aos-duration="1200">
             As a creative problem solver, Andrew is always looking for unique and effective solutions to challenges. Over the years, he has developed a knack for analyzing complex problems, identifying underlying issues, and coming up with creative solutions.
