--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img src="./img/Andrew.png" id="profile_photo" class="d-block img-fuid col-12" alt="Bootstrap Themes" loading="lazy" data-aos="fade-left" data-aos-duration="1300">
       </div>
 
-      <div class="container-fluid col col-11 col-sm-10 col-md-5 col-lg-6 pt-sm-3">
+      <div class="container-fluid pt-4 col-11 col-sm-10 col-md-5 col-lg-6">
           <h1 class="display-5 fw-bold text-white text-shadow-drop-br" data-aos="fade-right" data-aos-duration="1500">Joevie Andrew Tuquib</h1>
           <p class="lead text-white text-shadow-drop-br" data-aos="fade-right" data-aos-duration="1200">
             As a creative problem solver, Andrew is always looking for unique and effective solutions to challenges. Over the years, he has developed a knack for analyzing complex problems, identifying underlying issues, and coming up with creative solutions.
@@ -111,13 +111,11 @@
                 <h3 class="fw-semibold mb-0 ">Technologies</h3>
             </div>
             <ul class="container">
-                <li class="">HTML5</li>
-                <li class="">CSS3</li>
+                <li class="">HTML 5</li>
+                <li class="">CSS 3</li>
                 <li class="">Bootstrap</li>
                 <li class="">Javascript</li>
-                <li class="">JQuery</li>
-                <li class="">NodeJS</li>
-                <li class="">ReactJS</li>
+                <li class="">React JS</li>
             </ul>
         </div>
   
@@ -274,7 +272,7 @@
                 <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1 1 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4 4 0 0 1-.128-1.287z"/>
                 <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243z"/>
               </svg>
-              Avida-Realliving</a>
+              Avida x Realliving</a>
           </div>    
         </div>
 
