--- a/index.html
+++ b/index.html
@@ -111,10 +111,14 @@
                 <h3 class="fw-semibold mb-0 ">Technologies</h3>
             </div>
             <ul class="container">
-                <li class="">HTML 5</li>
-                <li class="">CSS 3</li>
+                <li class="">HTML5</li>
+                <li class="">CSS3</li>
                 <li class="">Bootstrap</li>
                 <li class="">Javascript</li>
+                <li class="">jQuery</li>
+                <li class="">NodeJS</li>
+                <li class="">EJS</li>
+                <li class="">Postman</li>
                 <li class="">React JS</li>
             </ul>
         </div>
