--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                 <li class="">Bootstrap</li>
                 <li class="">Javascript</li>
                 <li class="">jQuery</li>
-                <li class="">NodeJS</li>
+                <li class="">Node.js</li>
+                <li class="">Express.js</li>
                 <li class="">EJS</li>
                 <li class="">Postman</li>
                 <li class="">React JS</li>
